--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@satyam-code143/react-digital-number",
+  "name": "react-digital-number-2",
   "version": "1.0.0",
   "description": "A package for react that provides digital numbers",
   "main": "index.js",
